src/objects/Avm_Property__c.object
<CustomObject>
    <fields>
        <fullName>Acf_Property_address__c</fullName>
        <formula>Asset_And_Liability__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_And_Liability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset And Liability</label>
        <referenceTo>Asset_And_Liability__c</referenceTo>
        <relationshipLabel>Property Avm</relationshipLabel>
        <relationshipName>Property_Avm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <formula>VALUE($Label.Expiry_Time) + LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fares_Code__c</fullName>
        <label>Fares Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_Condition__c</fullName>
        <label>Fares Condition</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_FSD_Score__c</fullName>
        <label>Fares FSD Score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_ReferenceID__c</fullName>
        <label>Fares ReferenceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_ReportType__c</fullName>
        <label>Fares ReportType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_RunDate__c</fullName>
        <label>Fares RunDate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_Score__c</fullName>
        <label>Fares Score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_ValuationDate__c</fullName>
        <label>Fares Valuation Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_Value_Estimate__c</fullName>
        <label>Fares Value Estimate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_Value_High__c</fullName>
        <label>Fares Value High</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fares_Value_Low__c</fullName>
        <label>Fares Value Low</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_address__c</fullName>
        <label>Property address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faresDescription__c</fullName>
        <label>Fares Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propertyId__c</fullName>
        <externalId>true</externalId>
        <label>propertyId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Avm Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_And_Liability__c</columns>
        <columns>Fares_Code__c</columns>
        <columns>Fares_Condition__c</columns>
        <columns>faresDescription__c</columns>
        <columns>Fares_FSD_Score__c</columns>
        <columns>Fares_Score__c</columns>
        <columns>Fares_ValuationDate__c</columns>
        <columns>Fares_Value_Estimate__c</columns>
        <columns>Fares_Value_High__c</columns>
        <columns>Fares_Value_Low__c</columns>
        <columns>Acf_Property_address__c</columns>
        <columns>propertyId__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN--{0000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avm Property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>